Source/WebCore: First letter text renderer should be anonymous https://bugs.webkit.org/show_bug.cgi?id=179114

Reviewed by Darin Adler.

Currently both RenderTextFragment and RenderText for first letter point to the same Text node.
There should only be one non-anonymous renderer per node.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored const):

    Skip the first letter text renderer instead of the fragment.

* rendering/RenderBoxModelObject.cpp:
(WebCore::firstLetterRemainingTextMap):

    Use WeakPtr.
    Modernize.

(WebCore::RenderBoxModelObject::willBeDestroyed):
(WebCore::RenderBoxModelObject::firstLetterRemainingText const):

    Avoid hash lookup with the new isFirstLetter bit.

(WebCore::RenderBoxModelObject::setFirstLetterRemainingText):

* rendering/RenderElement.cpp:
(WebCore::RenderElement::RenderElement):
* rendering/RenderElement.h:
(WebCore::RenderElement::isFirstLetter const):
(WebCore::RenderElement::setIsFirstLetter):

    Add a bit for more explicit code.

* rendering/RenderTextFragment.cpp:
(WebCore::RenderTextFragment::setText):

    Assert that RenderTextFragment is always the non-anonymous renderer.

* style/RenderTreeUpdaterFirstLetter.cpp:
(WebCore::updateFirstLetterStyle):

    Set the isFirstLetter bit.

(WebCore::createFirstLetterRenderer):

    Set the isFirstLetter bit.
    Remove the old text renderer before adding a new one.

LayoutTests:
First letter renderer should be anonymous
https://bugs.webkit.org/show_bug.cgi?id=179114

Reviewed by Darin Adler.

* fast/dynamic/first-letter-after-list-marker-expected.txt:
* platform/mac/css1/pseudo/firstletter-expected.txt:
* platform/mac/css1/pseudo/multiple_pseudo_elements-expected.txt:
* platform/mac/css2.1/t051202-c24-first-lttr-00-b-expected.txt:
* platform/mac/css2.1/t051202-c26-psudo-nest-00-c-expected.txt:
* platform/mac/css3/selectors3/html/css3-modsel-166-expected.txt:
* platform/mac/css3/selectors3/html/css3-modsel-166a-expected.txt:
* platform/mac/css3/selectors3/html/css3-modsel-39-expected.txt:
* platform/mac/css3/selectors3/html/css3-modsel-39b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-166-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-166a-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-39-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-39b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-166-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-166a-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-39-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-39b-expected.txt:
* platform/mac/editing/selection/extend-by-word-002-expected.txt:
* platform/mac/fast/block/lineboxcontain/glyphs-expected.txt:
* platform/mac/fast/box-shadow/basic-shadows-expected.txt:
* platform/mac/fast/css-generated-content/003-expected.txt:
* platform/mac/fast/css-generated-content/007-expected.txt:
* platform/mac/fast/css-generated-content/009-expected.txt:
* platform/mac/fast/css-generated-content/012-expected.txt:
* platform/mac/fast/css-generated-content/first-letter-in-nested-before-table-expected.txt:
* platform/mac/fast/css-generated-content/initial-letter-basic-expected.txt:
* platform/mac/fast/css-generated-content/initial-letter-border-padding-expected.txt:
* platform/mac/fast/css-generated-content/initial-letter-clearance-expected.txt:
* platform/mac/fast/css-generated-content/initial-letter-descender-expected.txt:
* platform/mac/fast/css-generated-content/initial-letter-raised-expected.txt:
* platform/mac/fast/css-generated-content/initial-letter-sunken-expected.txt:
* platform/mac/fast/css/first-letter-capitalized-expected.txt:
* platform/mac/fast/css/first-letter-detach-expected.txt:
* platform/mac/fast/css/first-letter-first-line-hover-expected.txt:
* platform/mac/fast/css/first-letter-float-after-float-expected.txt:
* platform/mac/fast/css/first-letter-float-expected.txt:
* platform/mac/fast/css/first-letter-hover-expected.txt:
* platform/mac/fast/css/first-letter-punctuation-expected.txt:
* platform/mac/fast/css/first-letter-recalculation-expected.txt:
* platform/mac/fast/css/first-letter-visibility-expected.txt:
* platform/mac/fast/dynamic/first-letter-display-change-expected.txt:
* platform/mac/fast/multicol/shadow-breaking-expected.txt:
* platform/mac/fast/selectors/039-expected.txt:
* platform/mac/fast/selectors/039b-expected.txt:
* platform/mac/fast/selectors/166a-expected.txt:
* platform/mac/fast/text/firstline/002-expected.txt:
* platform/mac/fast/text/firstline/003-expected.txt:


Canonical link: https://commits.webkit.org/195271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224324 268f45cc-cd09-0410-ab3c-d52691b4dbfc